// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinischeduleBlock renders a block 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Block
    </span>
    block
  </div>,
  <div
    className="m-minischedule__run-header"
  >
    run
  </div>,
  <div
    className="m-minischedule__row"
  >
    {"time":20,"place":"start","midRoute":false}
  </div>,
  <div
    className="m-minischedule__row"
  >
    {"id":"trip"}
  </div>,
  <div
    className="m-minischedule__row"
  >
    {"time":21,"place":"end","midRoute":false}
  </div>,
]
`;

exports[`MinischeduleBlock renders a not found state 1`] = `"No block found"`;

exports[`MinischeduleBlock renders the loading state 1`] = `"loading..."`;

exports[`MinischeduleRun renders a not found state 1`] = `"No run found"`;

exports[`MinischeduleRun renders a run 1`] = `
Array [
  <div
    className="m-minischedule__header"
  >
    <span
      className="m-minischedule__header-label"
    >
      Run
    </span>
    run
  </div>,
  <div
    className="m-minischedule__row"
  >
    {"breakType":"Break","startTime":10,"endTime":11}
  </div>,
  <div
    className="m-minischedule__row"
  >
    {"time":20,"place":"start","midRoute":false}
  </div>,
  <div
    className="m-minischedule__row"
  >
    {"id":"trip"}
  </div>,
  <div
    className="m-minischedule__row"
  >
    {"time":21,"place":"end","midRoute":false}
  </div>,
]
`;

exports[`MinischeduleRun renders the loading state 1`] = `"loading..."`;
